feat(train): improve reproducibility and tooling
- auto-select best_model with F1 as primary metric (EM secondary)
- add standalone evaluation script: eval_cli
- move train hyperparams to train.yaml (remove hard-coded fp16/logging_steps/warmup_ratio/weight_decay)
- add automatic output naming
- add flow tags: team/env/git_commit/dataset_version
- save train_config.yaml to artifacts
- log split sizes + sampled max context length distribution
- add tiny pre-training sanity check
- add sweep scripts

--- a/notebooks/colab_train.ipynb
+++ b/notebooks/colab_train.ipynb
@@ -39,6 +39,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60e4f482",
+   "metadata": {},
+   "source": [
+    "Running sweep which includes the baseline traing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "809ff409",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!uv run python -m scripts.sweep.py --train configs/train.yaml --sweep configs/sweep.yaml\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d43b29e9",
+   "metadata": {},
+   "source": [
+    "# Running baseline training alone"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e4da8538",
@@ -46,6 +72,40 @@
    "outputs": [],
    "source": [
     "!uv run python -m src.train --config configs/train.yaml\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53303bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!uv run python -m src.eval_cli --model_dir artifacts/models/best --samples 500\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "772cbc4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!uv run python -m mlflow ui \\\n",
+    "    --backend-store-uri \"file:/content/drive/MyDrive/extractive-qa-mlops/mlruns\" \\\n",
+    "    --host 0.0.0.0 \\\n",
+    "    --port 5000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2d0097f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import output\n",
+    "output.serve_kernel_port_as_window(5000)rnel.proxyPort(5000)\")"
    ]
   },
   {
