feat(reports): add error analysis cases and model card

--- a/notebooks/colab_train.ipynb
+++ b/notebooks/colab_train.ipynb
@@ -85,6 +85,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd7d245a",
+   "metadata": {},
+   "source": [
+    "MLflow UI for Colab"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "772cbc4d",
