fix: make eval EM/F1 reliable and speed up error analysis

--- a/notebooks/colab_train.ipynb
+++ b/notebooks/colab_train.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv run python -m scripts.sweep.py --train configs/train.yaml --sweep configs/sweep.yaml\n"
+    "!uv run python -m scripts.sweep --train configs/train.yaml --sweep configs/sweep.yaml"
    ]
   },
   {
