Make QA stub deterministic; add tests and ensure coverage

--- a/test_model_mlops/train_bert.ipynb
+++ b/test_model_mlops/train_bert.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip -q install torch transformers datasets evaluate accelerate peft numpy\n"
+    "!pip -q install torch transformers datasets evaluate accelerate peft numpy"
    ]
   },
   {
@@ -96,7 +96,8 @@
     }
    ],
    "source": [
-    "import os, collections\n",
+    "import os\n",
+    "import collections\n",
     "import numpy as np\n",
     "import torch\n",
     "\n",
@@ -109,7 +110,7 @@
     "    default_data_collator,\n",
     ")\n",
     "import evaluate\n",
-    "from peft import LoraConfig, get_peft_model, TaskType\n"
+    "from peft import LoraConfig, get_peft_model, TaskType"
    ]
   },
   {
@@ -120,7 +121,7 @@
    "outputs": [],
    "source": [
     "MODEL_NAME = \"bert-base-uncased\"\n",
-    "DATASET_NAME = \"squad_v2\"     # start with this\n",
+    "DATASET_NAME = \"squad_v2\"  # start with this\n",
     "OUTPUT_DIR = \"./artifacts/model\"  # change to Drive path if you want\n",
     "\n",
     "MAX_LENGTH = 384\n",
@@ -132,7 +133,7 @@
     "USE_LORA = True\n",
     "MERGE_LORA_BEFORE_SAVE = True\n",
     "\n",
-    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n"
+    "os.makedirs(OUTPUT_DIR, exist_ok=True)"
    ]
   },
   {
@@ -190,13 +191,19 @@
     "            token_end_index -= 1\n",
     "\n",
     "        # If answer not fully in span -> CLS\n",
-    "        if not (offsets[token_start_index][0] <= start_char and offsets[token_end_index][1] >= end_char):\n",
+    "        if not (\n",
+    "            offsets[token_start_index][0] <= start_char\n",
+    "            and offsets[token_end_index][1] >= end_char\n",
+    "        ):\n",
     "            start_positions.append(cls_index)\n",
     "            end_positions.append(cls_index)\n",
     "            continue\n",
     "\n",
     "        # Move to start\n",
-    "        while token_start_index < len(offsets) and offsets[token_start_index][0] <= start_char:\n",
+    "        while (\n",
+    "            token_start_index < len(offsets)\n",
+    "            and offsets[token_start_index][0] <= start_char\n",
+    "        ):\n",
     "            token_start_index += 1\n",
     "        start_positions.append(token_start_index - 1)\n",
     "\n",
@@ -237,7 +244,7 @@
     "            (o if sequence_ids[k] == 1 else None)\n",
     "            for k, o in enumerate(offset_mapping[i])\n",
     "        ]\n",
-    "    return tokenized\n"
+    "    return tokenized"
    ]
   },
   {
@@ -255,7 +262,9 @@
     }
    ],
    "source": [
-    "def postprocess_qa_predictions(examples, features, raw_predictions, n_best_size=20, max_answer_length=30):\n",
+    "def postprocess_qa_predictions(\n",
+    "    examples, features, raw_predictions, n_best_size=20, max_answer_length=30\n",
+    "):\n",
     "    all_start_logits, all_end_logits = raw_predictions\n",
     "\n",
     "    example_id_to_index = {k: i for i, k in enumerate(examples[\"id\"])}\n",
@@ -281,7 +290,7 @@
     "\n",
     "            for s in start_idxs:\n",
     "                for e in end_idxs:\n",
-    "                    if s >= len(offsets) or e >= len(offsets): \n",
+    "                    if s >= len(offsets) or e >= len(offsets):\n",
     "                        continue\n",
     "                    if offsets[s] is None or offsets[e] is None:\n",
     "                        continue\n",
@@ -305,6 +314,7 @@
     "\n",
     "metric = evaluate.load(DATASET_NAME)\n",
     "\n",
+    "\n",
     "def compute_metrics(p, eval_examples, eval_features):\n",
     "    preds = postprocess_qa_predictions(eval_examples, eval_features, p.predictions)\n",
     "\n",
@@ -315,7 +325,10 @@
     "    references = [{\"id\": ex[\"id\"], \"answers\": ex[\"answers\"]} for ex in eval_examples]\n",
     "\n",
     "    result = metric.compute(predictions=formatted_predictions, references=references)\n",
-    "    return {\"exact_match\": float(result.get(\"exact\", 0.0)), \"f1\": float(result.get(\"f1\", 0.0))}\n"
+    "    return {\n",
+    "        \"exact_match\": float(result.get(\"exact\", 0.0)),\n",
+    "        \"f1\": float(result.get(\"f1\", 0.0)),\n",
+    "    }"
    ]
   },
   {
@@ -333,7 +346,9 @@
     }
    ],
    "source": [
-    "def postprocess_qa_predictions(examples, features, raw_predictions, n_best_size=20, max_answer_length=30):\n",
+    "def postprocess_qa_predictions(\n",
+    "    examples, features, raw_predictions, n_best_size=20, max_answer_length=30\n",
+    "):\n",
     "    all_start_logits, all_end_logits = raw_predictions\n",
     "\n",
     "    example_id_to_index = {k: i for i, k in enumerate(examples[\"id\"])}\n",
@@ -359,7 +374,7 @@
     "\n",
     "            for s in start_idxs:\n",
     "                for e in end_idxs:\n",
-    "                    if s >= len(offsets) or e >= len(offsets): \n",
+    "                    if s >= len(offsets) or e >= len(offsets):\n",
     "                        continue\n",
     "                    if offsets[s] is None or offsets[e] is None:\n",
     "                        continue\n",
@@ -383,6 +398,7 @@
     "\n",
     "metric = evaluate.load(DATASET_NAME)\n",
     "\n",
+    "\n",
     "def compute_metrics(p, eval_examples, eval_features):\n",
     "    preds = postprocess_qa_predictions(eval_examples, eval_features, p.predictions)\n",
     "\n",
@@ -393,7 +409,10 @@
     "    references = [{\"id\": ex[\"id\"], \"answers\": ex[\"answers\"]} for ex in eval_examples]\n",
     "\n",
     "    result = metric.compute(predictions=formatted_predictions, references=references)\n",
-    "    return {\"exact_match\": float(result.get(\"exact\", 0.0)), \"f1\": float(result.get(\"f1\", 0.0))}\n"
+    "    return {\n",
+    "        \"exact_match\": float(result.get(\"exact\", 0.0)),\n",
+    "        \"f1\": float(result.get(\"f1\", 0.0)),\n",
+    "    }"
    ]
   },
   {
@@ -457,7 +476,7 @@
     "        inference_mode=False,\n",
     "    )\n",
     "    model = get_peft_model(model, lora_config)\n",
-    "    model.print_trainable_parameters()\n"
+    "    model.print_trainable_parameters()"
    ]
   },
   {
@@ -576,7 +595,7 @@
     "    compute_metrics=lambda p: compute_metrics(p, dataset[\"validation\"], eval_features),\n",
     ")\n",
     "\n",
-    "trainer.train()\n"
+    "trainer.train()"
    ]
   },
   {
@@ -594,7 +613,7 @@
     "tokenizer.save_pretrained(OUTPUT_DIR)\n",
     "\n",
     "print(\"Saved to:\", OUTPUT_DIR)\n",
-    "print(\"Files:\", os.listdir(OUTPUT_DIR))\n"
+    "print(\"Files:\", os.listdir(OUTPUT_DIR))"
    ]
   },
   {
