fix(notebooks): fix cells and outputs in colab_train.ipynb

--- a/notebooks/colab_train.ipynb
+++ b/notebooks/colab_train.ipynb
@@ -61,7 +61,7 @@
    "id": "d43b29e9",
    "metadata": {},
    "source": [
-    "# Running baseline training alone"
+    "Running baseline training alone"
    ]
   },
   {
@@ -81,39 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv run python -m src.eval_cli --model_dir artifacts/models/best --samples 500\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cd7d245a",
-   "metadata": {},
-   "source": [
-    "MLflow UI for Colab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "772cbc4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!uv run python -m mlflow ui \\\n",
-    "    --backend-store-uri \"file:/content/drive/MyDrive/extractive-qa-mlops/mlruns\" \\\n",
-    "    --host 0.0.0.0 \\\n",
-    "    --port 5000\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2d0097f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from google.colab import output\n",
-    "output.serve_kernel_port_as_window(5000)rnel.proxyPort(5000)\")"
+    "!cd /content/extractive-qa-mlops && uv run python -m src.eval_cli \\\n",
+    "  --model_dir \"/content/drive/MyDrive/extractive-qa-mlops/artifacts/models/best\" \\\n",
+    "  --dataset squad --samples 500\n"
    ]
   },
   {
