fix(ci): make placeholder modules pass imports and tests

--- a/notebooks/colab_train.ipynb
+++ b/notebooks/colab_train.ipynb
@@ -28,6 +28,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "087866b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd /content/extractive-qa-mlops\n",
+    "!pip -q install -e ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ea83252f",
    "metadata": {},
    "outputs": [],
@@ -53,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv run python -m scripts.sweep --train configs/train.yaml --sweep configs/sweep.yaml"
+    "!uv run python scripts/sweep.py --train configs/train.yaml --sweep configs/sweep.yaml"
    ]
   },
   {
@@ -71,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv run python -m src.train --config configs/train.yaml\n"
+    "!uv run python -m extractive_qa_mlops.train --config configs/train.yaml\n"
    ]
   },
   {
@@ -81,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd /content/extractive-qa-mlops && uv run python -m src.eval_cli \\\n",
+    "!cd /content/extractive-qa-mlops && uv run python -m extractive_qa_mlops.eval_cli \\\n",
     "  --model_dir \"/content/drive/MyDrive/extractive-qa-mlops/artifacts/models/best\" \\\n",
     "  --dataset squad --samples 500\n"
    ]
