--- a/notebooks/colab_train.ipynb
+++ b/notebooks/colab_train.ipynb
@@ -86,6 +86,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "19dfd281",
+   "metadata": {},
+   "source": [
+    "Evaluate best model on SQuAD"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "53303bdd",
@@ -99,14 +107,81 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0883bc08",
+   "metadata": {},
+   "source": [
+    "MLflow UI via Colab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93532a53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pkill -f \"mlflow\" || true\n",
+    "!fuser -k 5000/tcp || true\n",
+    "!sleep 1\n",
+    "!ss -ltnp | grep 5000 || echo \"5000 not listening\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "705f12ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nohup python -m mlflow ui \\\n",
+    "  --backend-store-uri file:/content/drive/MyDrive/extractive-qa-mlops/mlruns \\\n",
+    "  --host 0.0.0.0 --port 5000 \\\n",
+    "  --allowed-hosts \"*\" \\\n",
+    "  --cors-allowed-origins \"*\" \\\n",
+    "  > mlflow.log 2>&1 &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0496cff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ss -ltnp | grep 5000\n",
+    "!curl -I http://127.0.0.1:5000\n",
+    "!tail -n 30 mlflow.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9314f6dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import output\n",
+    "url = output.eval_js(\"google.colab.kernel.proxyPort(5000)\")\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1323f53f",
    "metadata": {},
    "source": [
-    "MLflow UI\n",
-    "\n",
-    "```powershell\n",
-    "uv run python -m mlflow ui --backend-store-uri \"file:./mlruns\" --port 5000\n",
-    "```"
+    "MLflow UI via local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17c4a991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# powershell\n",
+    "uv run python -m mlflow ui --backend-store-uri \"file:./mlruns\" --port 5000"
    ]
   }
  ],
